--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,10 @@
 [build]
   command = "# no build command"
   functions = "functions"
-  publish = ""
+  publish = "."
+
+[build.environment]
+  NETLIFY_USE_CACHE = "false"
 
 ## Uncomment to use this redirect for Single Page Applications like create-react-app.
 ## Not needed for static site generators.
